<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <com.gqj.GameDemo.CSurfaceView
        android:id="@+id/gameD1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/str_start" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="64dp"
        android:layout_toLeftOf="@+id/button1"
        android:text="@string/str_f1" />

	<Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/button2"
        android:text="@string/str_f2" />
	<Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/button3"
        android:text="@string/str_f3" />

	<RelativeLayout
	    android:layout_width="192dp"
	    android:layout_height="192dp"
	    android:layout_alignParentBottom="true" >

		<Button
		    android:id="@+id/button5"
		    android:layout_width="64dp"
		    android:layout_height="64dp"
		    android:layout_centerHorizontal="true"
		    android:text="@string/str_up" />

		<Button
		    android:id="@+id/button6"
		    android:layout_width="64dp"
		    android:layout_height="64dp"
		    android:layout_centerVertical="true"
		    android:text="@string/str_left" />

		<Button
		    android:id="@+id/button7"
		    android:layout_width="64dp"
		    android:layout_height="64dp"
		    android:layout_alignParentBottom="true"
		    android:layout_centerHorizontal="true"
		    android:text="@string/str_down" />

		<Button
		    android:id="@+id/button8"
		    android:layout_width="64dp"
		    android:layout_height="64dp"
		    android:layout_alignParentRight="true"
		    android:layout_centerVertical="true"
		    android:text="@string/str_right" />

	</RelativeLayout>

</RelativeLayout>
